# chatserver

./: CMakeLists.txt  build.sh
chatserver/include/server/: chatserver.h
chatserver/include/server/model/: add_friend_req_model.h  friend_model.h  offline_message_model.h  user.h  user_model.h
chatserver/include/server/redis/: redis.h
chatserver/src/client/: main.cc
chatserver/src/server/: CMakeLists.txt  chatservice.cc  main.cc
chatserver/src/server/model/: friend_model.cc  group_model.cc
chatserver/test/: testMap.cc  testjson.cc
conf/: redis.ini
include/: public.h
include/client/: global_data.h
include/server/: chatservice.h
include/server/database/: database.h
include/server/model/: group.h  group_model.h  group_users.h
src/client/: global_data.cc  main.cc
src/server/: chatserver.cc  chatservice.cc
src/server/database/: database.cc
src/server/model/: add_friend_req_model.cc  offline_message_model.cc  user_model.cc
src/server/redis/: redis.cc
test/: testMap
